Added some repository functionality.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,41 @@
-spring.application.name=demo
+spring.application.name=TestService
+
+server.port=8080
+
+# Reject hibernate to modify our database as it is done by flyway.
+spring.jpa.hibernate.ddl-auto=none
+
+#---
+# Enable Posgresql connection
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+# Enable flyway migration.
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+# Do not run sql queries from schema.sql and data.sql on app start as we use flyway.
+spring.sql.init.mode=never
+
+#---
+spring.config.activate.on-profile=ci,test
+# Enable H2 database creation and connection.
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test-service-database
+spring.datasource.username=test
+spring.datasource.password=test
+# Enable flyway migration.
+spring.flyway.enabled=true
+# spring.flyway.url=jdbc:h2:mem:user-service-database
+# spring.flyway.user=test
+# spring.flyway.password=test
+spring.flyway.locations=classpath:db/migration
+#Enable web-browser console: localhost:8080/h2-console
+spring.h2.console.enabled=true
+# Run sql queries from schema.sql and data.sql on app start.
+spring.sql.init.mode=never
+
+# Show sql queries in console.
+# spring.jpa.show-sql=true
+# Output sql queries in pretty format.
+spring.jpa.properties.hibernate.format_sql=true
