--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,20 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
-      - name: Copy JAR to remote server with appleboy
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        run: docker build -t ya-workshop-test-service .
+
+      - name: Save Docker Image to File
+        run: docker save ya-workshop-test-service -o ya-workshop-test-service.tar
+
+      - name: Transfer Docker image to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.PRIVATE_KEY }}
-          source: "target/demo-0.0.1-SNAPSHOT.jar"
-          target: "./"
+          source: ya-workshop-test-service.tar
+          target: ~/deploy/
