--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.PRIVATE_KEY }}
-          source: |
-            ya-workshop-test-service.tar
-            docker-compose.yml
+          source: "ya-workshop-test-service.tar,docker-compose.yml"
           target: ~/deploy/test-service/
 
       - name: Deploy on Server
